--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@ p {
     color: rgb(117, 28, 48);
     text-decoration: line-through;
 }
-.rabattext {
+.rabatpris {
     color: rgb(50, 205, 50);
 }
 .h2hoved {
